# leptos-ssr-first

./: .env  .env.dist  .gitignore  Cargo.toml  README.md  TODO.md  build.rs  package-lock.json  package.json
.sqlx/: query-52b4d9954a8afc1b8e1d3c9388a754c38397bb6ec6f1ae80af87bc8399579a0d.json  query-59b80e5a4fc179f45c909b18f6b8c7ac89abeffc6d9ac28b023128b01876768f.json  query-603d361fe472848a820d9f6e358bed1e9c7e00a9effd8ac6ab1e10f8d265f9d1.json  query-67844ba6f38637461ee7940e9a365b72494a223370786facb09625559c014560.json  query-9ab205242ea5b7ff0db7ea2f7255e3b72e88b80794caaf13d35e5fad95556a4b.json  query-e2c2efe72151c2a7d4bd511a4c2e90f382fd96ba30b4eb3ccaf499f5fa4f2b8c.json  query-ef8fb9aac4b9ab3ec489556e6aac2db866880e69078912af577e07167ff2fccd.json
config/: configuration.json.dist  message_of_the_day.json  message_of_the_day.json.dist
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: example.spec.ts  layout.spec.ts  login.spec.ts
end2end/tests/fixtures/: database.ts  i18n.ts  loginPage.ts
end2end/tests/i18n/: browser_lang.spec.ts  cookie_lang.spec.ts  user_lang.spec.ts
end2end/tests/poms/: loginPage.ts
locales/: de.json  en.json
migrations/: 20251121004620_create-account-table.sql  20251121200527_insert-admin-account.sql  20251124214412_create-session-table.sql  20260308164250_cascade-deleting-account.sql
src/: app.rs  client.rs  lib.rs  main.rs  middleware.rs  utils.rs
src/api/: error.rs  jwt.rs  mod.rs  response.rs
src/layout/: footer.rs  mod.rs  navbar.rs  server_message.rs
src/model/: language.rs  mod.rs  route.rs  user.rs
src/pages/: home_page.rs  imprint.rs  login.rs  mod.rs  not_found.rs  privacy.rs
src/server_utils/: authorization.rs  background_task.rs  configuration.rs  logging.rs  mod.rs  route.rs
style/: main.scss
