[package]
name = "leptos-ssr-first"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_actix = { version = "0.8", optional = true }
leptos_router = { version = "0.8" }
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3.82", features = ["Window", "Navigator", "Storage", "HtmlSelectElement"] }
leptos_i18n = "0.6.0"
server_fn = "0.8.8"
sqlx = { version = "0.8.6", optional = true, features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
bcrypt = "0.18.0"
getrandom = {version = "0.3.4", features = ["wasm_js"]}
futures-util = "0.3.31"
log = {version = "0.4.29",optional = true }
config = { version = "0.15.17",optional = true }
chrono = "0.4.42"
jsonwebtoken = {version = "10.2.0", default-features = false, features = ["rust_crypto"], optional = true}
tokio-cron-scheduler = {version = "0.15.1", optional = true}
tokio = { version = "1.48.0", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
regex = "1.12.2"

[build-dependencies]
leptos_i18n_build = "0.6.0"

[features]
csr = [
  "leptos/csr",
  "leptos_i18n/csr"
]
hydrate = [
  "leptos/hydrate",
  "leptos_i18n/hydrate",
  "leptos_i18n_build/hydrate",
]
ssr = [
  "actix-files",
  "actix-web",
  "leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_i18n/actix",
  "leptos_i18n_build/ssr",
  "sqlx/postgres",
  "sqlx/runtime-tokio",
  "sqlx/uuid",
  "sqlx/chrono",
  "getrandom/wasm_js",
  "log",
  "config",
  "log/std",
  "jsonwebtoken",
  "tokio-cron-scheduler",
  "tokio"
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos-ssr-first"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "de"]
